--- a/ContactManagerClient/MainWindow.xaml
+++ b/ContactManagerClient/MainWindow.xaml
@@ -80,7 +80,7 @@
         <DatePicker HorizontalAlignment="Left"
                     Margin="359,227,0,0"
                     VerticalAlignment="Top" x:Name="txtBirthDate" 
-                    SelectedDateChanged="DatePicker_SelectedDateChanged" Width="120"/>
+                     Width="120"/>
         <Button Content="Edit Contact" HorizontalAlignment="Left" Margin="458,344,0,0" VerticalAlignment="Top" Width="75" Click="Button_Edit"/>
         <TextBox HorizontalAlignment="Left" Height="23" 
 
