--- a/ContactManagerClient/MainWindow.xaml
+++ b/ContactManagerClient/MainWindow.xaml
@@ -27,7 +27,7 @@
         Height="23" Margin="138,299,0,0" TextWrapping="Wrap" 
 
         VerticalAlignment="Top" Width="120"/>
-        <Label Content="Company" HorizontalAlignment="Left" 
+        <Label Content="Date of Birth" HorizontalAlignment="Left" 
 
         Margin="276,228,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.085,-0.243"/>
         <Label Content="Email" HorizontalAlignment="Left" 
